--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,104 @@
 
+@Article{	  marcus2026rumors,
+  author	= {Marcus, Gary and Quattrociocchi, Walter and Capraro,
+		  Valerio},
+  journal	= {Marcus on AI},
+  title		= {Rumors of {AGI}'s Arrival Have Been Greatly Exaggerated},
+  year		= {2026}
+}
+
+@Article{	  zhu2026paperbanana,
+  author	= {Zhu, Dawei and Meng, Rui and Song, Yale and Wei, Xiyu and
+		  Li, Sujian and Pfister, Tomas and Yoon, Jinsung},
+  number	= {arXiv:2601.23265},
+  title		= {PaperBanana: Automating Academic Illustration for {AI}
+		  Scientists},
+  year		= {2026}
+}
+
+@Article{	  2026international,
+  author	= {Bengio, Yoshua and Clare, Stephen and Prunkl, Carina and
+		  Mindermann, S{\"o}ren and Privitera},
+  title		= {International {AI} Safety Report 2026},
+  year		= {2026}
+}
+
+@Article{	  implicit,
+  author	= {Collins, Chris},
+  journal	= {Dropbox},
+  title		= {Implicit Predicates (February 15 2026)},
+  year		= {2026}
+}
+
+@Article{	  orth2026experimental,
+  author	= {Orth, Wesley and Moulton, Keir},
+  journal	= {Natural Language \\& Linguistic Theory},
+  number	= {1},
+  pages		= {15},
+  title		= {Experimental Evidence from Extraction for the D-shell
+		  Analysis of Clausal Prolepsis},
+  volume	= {44},
+  year		= {2026}
+}
+
+@Article{	  shojaee2025illusion,
+  author	= {Shojaee, Parshin and Mirzadeh, Iman and Alizadeh, Keivan
+		  and Horton, Maxwell and Bengio, Samy and Farajtabar,
+		  Mehrdad},
+  number	= {arXiv:2506.06941},
+  title		= {The Illusion of Thinking: Understanding the Strengths and
+		  Limitations of Reasoning Models via the Lens of Problem
+		  Complexity},
+  year		= {2025}
+}
+
+@Article{	  leviathan2025prompt,
+  author	= {Leviathan, Yaniv and Kalman, Matan and Matias, Yossi},
+  number	= {arXiv:2512.14982},
+  title		= {Prompt Repetition Improves Non-Reasoning {LLM}s},
+  year		= {2025}
+}
+
+@Article{	  laban2025llms,
+  author	= {Laban, Philippe and Hayashi, Hiroaki and Zhou, Yingbo and
+		  Neville, Jennifer},
+  number	= {arXiv:2505.06120},
+  title		= {{LLM}s Get Lost In Multi-Turn Conversation},
+  year		= {2025}
+}
+
+@Article{	  rawte2023troubling,
+  author	= {Rawte, Vipula and Chakraborty, Swagata and Pathak, Agnibh
+		  and Sarkar, Anubhav and Tonmoy, S. M. Towhidul Islam and
+		  Chadha, Aman and Sheth, Amit P. and Das, Amitava},
+  number	= {arXiv:2310.04988},
+  title		= {The Troubling Emergence of Hallucination in Large Language
+		  Models -- An Extensive Definition, Quantification, and
+		  Prescriptive Remediations},
+  year		= {2023}
+}
+
+@Article{	  kayne2021note,
+  author	= {Kayne, Richard S.},
+  journal	= {Arborescences},
+  number	= {10},
+  pages		= {103--112},
+  title		= {A Note on the Tension between Silent Elements and Lexical
+		  Ambiguity, with Special Reference to Inalienable
+		  Possession*},
+  year		= {2021}
+}
+
+@Article{	  kayne2020note,
+  author	= {Kayne, Richard S.},
+  journal	= {Isogloss. Open Journal of Romance Linguistics},
+  pages		= {1--12},
+  title		= {A Note on the Silent {GO} That Underlies an Instance of
+		  Apparent Suppletion in Spanish},
+  volume	= {6},
+  year		= {2020}
+}
+
 @Book{		  angel1989how,
   address	= {Boulder, Colo},
   author	= {Angel, Leonard},
