--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,35 @@
 
+@Article{	  dominguez-armas2026prote,
+  author	= {Dom{\'i}nguez-Armas, {\'A}lvaro},
+  journal	= {Synthese},
+  number	= {3},
+  pages		= {106},
+  title		= {Protests as Group Speech Acts},
+  volume	= {207},
+  year		= {2026}
+}
+
+@Article{	  boisseau2026exper,
+  author	= {Boisseau, {\'E}lo{\"\i}se},
+  journal	= {Synthese},
+  number	= {3},
+  pages		= {104},
+  title		= {Expertise, Opacity, and Trust in {AI} Systems},
+  volume	= {207},
+  year		= {2026}
+}
+
+@Article{	  sprouse2012test,
+  author	= {Sprouse, Jon and Wagers, Matt and Phillips, Colin},
+  journal	= {Language},
+  number	= {1},
+  pages		= {82--123},
+  title		= {A Test of the Relation Between Working-Memory Capacity and
+		  Syntactic Island Effects},
+  volume	= {88},
+  year		= {2012}
+}
+
 @Article{	  marcus2026rumors,
   author	= {Marcus, Gary and Quattrociocchi, Walter and Capraro,
 		  Valerio},
